Special scenario processing added, up and down both

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-TELEGRAM_BOT_TOKEN=7479078489:AAGkMmNqXDOuYq18EaaITfyK0MA40nxZeOg
+TELEGRAM_BOT_TOKEN=8179303385:AAFhDIe_StthHJ1dfmGdVRvhlp6ZeWuv8T4
+#TELEGRAM_BOT_TOKEN=7479078489:AAGkMmNqXDOuYq18EaaITfyK0MA40nxZeOg
 GEMINI_API_KEY=AIzaSyDUeD5yRZ6fkRW1PYDd2oOVG9PrttcLs4A
 GEMINI_MODEL=gemini-2.0-flash
